--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>🛒 MS Sohail general store</h1>
+    <h1>🛒 MS Rasheed general store</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="cart.html">Cart (<span id="cart-count">0</span>)</a>
